unpackaged/main/default/objects/items_Palmetto_Google_Drive__x/items_Palmetto_Google_Drive__x.object-meta.xml
<CustomObject>
    <externalDataSource>Palmetto_Google_Drive</externalDataSource>
    <externalName>items_Palmetto_Google_Drive</externalName>
    <label>items_Palmetto_Google_Drive</label>
    <pluralLabel>items_Palmetto_Google_Drive</pluralLabel>
</CustomObject>