unpackaged/main/default/objects/items_Palmetto_Google_Drive__x/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <externalDeveloperName>Comment</externalDeveloperName>
    <label>Comment</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>