unpackaged/main/default/objects/items_Palmetto_Google_Drive__x/fields/ContentLength__c.field-meta.xml
<CustomField>
    <fullName>ContentLength__c</fullName>
    <externalDeveloperName>ContentLength</externalDeveloperName>
    <label>ContentLength</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>