unpackaged/main/default/objects/items_Palmetto_Google_Drive__x/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <externalDeveloperName>CreationDate</externalDeveloperName>
    <label>CreationDate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>