unpackaged/main/default/objects/items_Palmetto_Google_Drive__x/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <externalDeveloperName>UpdateDate</externalDeveloperName>
    <label>UpdateDate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>